--- a/src/ItWasPossible.html
+++ b/src/ItWasPossible.html
@@ -127,7 +127,7 @@
     <div class="container">
         <p id="message">It was possible</p>
         <button onclick="makeImpossible()">💥 Surprise</button>
-        <img id="surpriseImage" src="a.jpg" alt="Surprise Image">
+        <img id="surpriseImage" src="static/a.jpg" alt="Surprise Image">
     </div>
 </body>
 </html>
